[PN-16055] feat: cleanup sonar issues