@@ -40,16 +40,12 @@ import java.io.IOException;
 import java.time.Instant;
 import java.time.ZonedDateTime;
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static org.mockito.ArgumentMatchers.eq;
 
 @Slf4j
 public class TestUtils {
     public static final String PN_NOTIFICATION_ATTACHMENT = "PN_NOTIFICATION_ATTACHMENT";
-    public static final String TOO_BIG = "TOO_BIG";
-    public static final String NOT_A_PDF = "NOT_A_PDF";
-
 
     public static void checkSendCourtesyAddresses(String iun, Integer recIndex, List<CourtesyDigitalAddressInt> courtesyAddresses, TimelineService timelineService, ExternalChannelMock externalChannelMock) {
 
@@ -187,7 +183,7 @@ public class TestUtils {
 
     public static void checkFailDigitalWorkflow(String iun, Integer recIndex, TimelineService timelineService, CompletionWorkFlowHandler completionWorkflow) {
         //Viene verificato che il workflow sia fallito
-        checkInTimlineIsFailedDigitalWorkflow(iun, recIndex, timelineService);
+        checkInTimelineIsFailedDigitalWorkflow(iun, recIndex, timelineService);
 
         ArgumentCaptor<NotificationInt> notificationCaptor = ArgumentCaptor.forClass(NotificationInt.class);
         ArgumentCaptor<Integer> recIndexCaptor = ArgumentCaptor.forClass(Integer.class);
@@ -201,7 +197,7 @@ public class TestUtils {
 
     public static void checkFailDigitalWorkflowMultiRec(String iun, Integer recIndex, int numberOfCompletedWorkflow, TimelineService timelineService, CompletionWorkFlowHandler completionWorkflow) {
         //Viene verificato che il workflow sia fallito
-        checkInTimlineIsFailedDigitalWorkflow(iun, recIndex, timelineService);
+        checkInTimelineIsFailedDigitalWorkflow(iun, recIndex, timelineService);
 
         ArgumentCaptor<NotificationInt> notificationCaptor = ArgumentCaptor.forClass(NotificationInt.class);
         ArgumentCaptor<Integer> recIndexCaptor = ArgumentCaptor.forClass(Integer.class);
@@ -211,7 +207,7 @@ public class TestUtils {
         );
     }
 
-    private static void checkInTimlineIsFailedDigitalWorkflow(String iun, Integer recIndex, TimelineService timelineService) {
+    private static void checkInTimelineIsFailedDigitalWorkflow(String iun, Integer recIndex, TimelineService timelineService) {
         Optional<TimelineElementInternal> failDigitalWorkflowOpt = timelineService.getTimelineElement(
                 iun,
                 TimelineEventId.DIGITAL_FAILURE_WORKFLOW.buildEventId(
@@ -567,8 +563,9 @@ public class TestUtils {
         Instant refinementDate = instantArgumentCaptorList.getLast();
 
         List<TimelineElementInternal> lastSendDigitalElementList = timelineService.getTimeline(iun, false).stream()
-                .filter(element -> TimelineElementCategoryInt.SEND_DIGITAL_DOMICILE.equals(element.getCategory()))
-                .sorted(Comparator.comparing(TimelineElementInternal::getTimestamp)).collect(Collectors.toList());
+            .filter(element -> TimelineElementCategoryInt.SEND_DIGITAL_DOMICILE.equals(element.getCategory()))
+            .sorted(Comparator.comparing(TimelineElementInternal::getTimestamp))
+            .toList();
 
         Instant lastSendDigitalDate = lastSendDigitalElementList.getLast().getTimestamp();
         //Viene ottenuta la data dell'ultimo invio verso externalChannel
@@ -632,7 +629,7 @@ public class TestUtils {
                                     NotificationDocumentInt.Ref actualRefWithoutKey = doc.getRef();
                                     return doc.toBuilder()
                                             .ref(actualRefWithoutKey.toBuilder()
-                                                    .key(response.getKey())
+                                                    .key(Objects.requireNonNull(response).getKey())
                                                     .build())
                                             .build();
                         }).toList();
@@ -642,7 +639,7 @@ public class TestUtils {
     public static List<DocumentWithContent> getDocumentWithContents(String fileDoc, List<NotificationDocumentInt> notificationDocumentList) {
         DocumentWithContent documentWithContent = DocumentWithContent.builder()
                 .content(fileDoc)
-                .document(notificationDocumentList.get(0))
+                .document(notificationDocumentList.getFirst())
                 .build();
         return Collections.singletonList(documentWithContent);
     }
@@ -664,20 +661,6 @@ public class TestUtils {
         );
     }
 
-    public static List<NotificationPaymentInfoInt> getPaymentWithF24(NotificationDocumentInt paymentDocumentInt) {
-        return List.of(
-                NotificationPaymentInfoInt.builder()
-                        .f24(F24Int.builder()
-                                .applyCost(true)
-                                .title("payment_f24_1")
-                                .metadataAttachment(paymentDocumentInt)
-                                .build()
-                        )
-                        .pagoPA(null)
-                        .build()
-        );
-    }
-
     public static void writeAllGeneratedLegalFacts(String iun, String className, TimelineService timelineService, SafeStorageClientMock safeStorageClientMock) {
         writeAllGeneratedLegalFacts(iun, className, timelineService, safeStorageClientMock, 3);
     }
@@ -688,7 +671,7 @@ public class TestUtils {
         timelineService.getTimeline(iun, true).forEach(
                 elem -> {
                     if (!elem.getLegalFactsIds().isEmpty()) {
-                        LegalFactsIdInt legalFactsId = elem.getLegalFactsIds().get(0);
+                        LegalFactsIdInt legalFactsId = elem.getLegalFactsIds().getFirst();
                         if (!LegalFactCategoryInt.PEC_RECEIPT.equals(legalFactsId.getCategory()) && !LegalFactCategoryInt.ANALOG_DELIVERY.equals(legalFactsId.getCategory())) {
                             String key = legalFactsId.getKey().replace("safestorage://", "");
                             log.info("[TEST] writing safestoragemock key={} testName={} cat={}", key, testName, legalFactsId.getCategory());
@@ -701,12 +684,10 @@ public class TestUtils {
 
     public static void checkGeneratedLegalFacts(NotificationInt notification,
                                                 NotificationRecipientInt recipient,
-                                                Integer recIndex,
                                                 int sentPecAttemptNumber,
                                                 GeneratedLegalFactsInfo generatedLegalFactsInfo,
                                                 EndWorkflowStatus endWorkflowStatus,
                                                 LegalFactGenerator legalFactGenerator,
-                                                TimelineService timelineService,
                                                 DelegateInfoInt delegateInfo
     ) {
 
@@ -939,44 +920,6 @@ public class TestUtils {
                 .build();
     }
 
-    public static NotificationInt getNotificationV2WithDocument(LegalDigitalAddressInt.LEGAL_DIGITAL_ADDRESS_TYPE channelType, String address) {
-        return NotificationInt.builder()
-                .iun("IUN_01")
-                .paProtocolNumber("protocol_01")
-                .sender(NotificationSenderInt.builder()
-                        .paId(" pa_02")
-                        .build()
-                )
-                .documents(List.of(NotificationDocumentInt.builder()
-                        .digests(NotificationDocumentInt.Digests.builder()
-                                .sha256("sha256").build())
-                        .ref(NotificationDocumentInt.Ref.builder().key("test").versionToken("1").build())
-                        .build()))
-                .recipients(Collections.singletonList(
-                        NotificationRecipientInt.builder()
-                                .taxId("testIdRecipient")
-                                .internalId("test")
-                                .denomination("Nome Cognome/Ragione Sociale")
-                                .digitalDomicile(LegalDigitalAddressInt.builder()
-                                        .type(channelType)
-                                        .address(address)
-                                        .build())
-                                .payments(List.of(NotificationPaymentInfoInt.builder()
-                                        .pagoPA(PagoPaInt.builder()
-                                                .noticeCode("noticeCode")
-                                                .creditorTaxId("taxId")
-                                                .attachment(NotificationDocumentInt.builder()
-                                                        .ref(NotificationDocumentInt.Ref.builder().key("paymentAttach").versionToken("1").build())
-                                                        .digests(NotificationDocumentInt.Digests.builder()
-                                                                .sha256("sha256").build())
-                                                        .build())
-                                                .build())
-                                        .build()))
-                                .build()
-                ))
-                .build();
-    }
-
     public static NotificationInt getNotificationV2WithoutPayments() {
         return NotificationInt.builder()
                 .iun("IUN_01")
@@ -1058,46 +1001,11 @@ public class TestUtils {
     }
 
 
-    public static NotificationInt getNotificationMultiRecipient() {
-        return NotificationInt.builder()
-                .iun("IUN_01")
-                .paProtocolNumber("protocol_01")
-                .sender(NotificationSenderInt.builder()
-                        .paId(" pa_02")
-                        .build()
-                )
-                .recipients(Arrays.asList(
-                        NotificationRecipientInt.builder()
-                                .taxId("testIdRecipient")
-                                .internalId("test")
-                                .denomination("Nome Cognome/Ragione Sociale")
-                                .digitalDomicile(LegalDigitalAddressInt.builder()
-                                        .type(LegalDigitalAddressInt.LEGAL_DIGITAL_ADDRESS_TYPE.PEC)
-                                        .address("account@dominio.it")
-                                        .build())
-                                .build(),
-                        NotificationRecipientInt.builder()
-                                .taxId("testIdRecipient")
-                                .internalId("test")
-                                .denomination("Nome Cognome/Ragione Sociale")
-                                .digitalDomicile(LegalDigitalAddressInt.builder()
-                                        .type(LegalDigitalAddressInt.LEGAL_DIGITAL_ADDRESS_TYPE.PEC)
-                                        .address("account@dominio.it")
-                                        .build())
-                                .build()
-                ))
-                .build();
-    }
-
     public static String getMethodName(final int depth) {
         final StackTraceElement[] ste = Thread.currentThread().getStackTrace();
         return ste[depth].getMethodName();
     }
 
-    public static String getMethodNameAndClassName(final int depth) {
-        final StackTraceElement[] ste = Thread.currentThread().getStackTrace();
-        return ste[depth].getClassName()+"."+ste[depth].getMethodName();
-    }
 
     public static String getRandomIun(int level) {
         String callerMethod = getMethodName(level);
@@ -1113,8 +1021,8 @@ public class TestUtils {
     private static String getIun(String callerMethod) {
         Random rand = new Random();
         int upperbound = 10000;
-        int int_random = rand.nextInt(upperbound);
-        return "iun-" + callerMethod + "_" + int_random;
+        int intRandom = rand.nextInt(upperbound);
+        return "iun-" + callerMethod + "_" + intRandom;
     }
 
 
@@ -1162,38 +1070,6 @@ public class TestUtils {
         );
     }
 
-
-    public static NotificationRecipientInt getNotificationRecipientInt() {
-        return NotificationRecipientInt.builder()
-                .taxId("testIdRecipient")
-                .internalId("test")
-                .denomination("Nome Cognome/Ragione Sociale")
-                .digitalDomicile(LegalDigitalAddressInt.builder()
-                        .type(LegalDigitalAddressInt.LEGAL_DIGITAL_ADDRESS_TYPE.PEC)
-                        .address("account@dominio.it")
-                        .build())
-                .payments(List.of(NotificationPaymentInfoInt.builder()
-                        .pagoPA(PagoPaInt.builder()
-                                .noticeCode("noticeCode")
-                                .creditorTaxId("taxId")
-                                .attachment(NotificationDocumentInt.builder()
-                                        .ref(NotificationDocumentInt.Ref.builder().build())
-                                        .digests(NotificationDocumentInt.Digests.builder()
-                                                .sha256("sha256").build())
-                                        .build())
-                                .build())
-                        .f24(F24Int.builder()
-                                .title("title")
-                                .applyCost(true)
-                                .metadataAttachment(NotificationDocumentInt.builder()
-                                        .ref(NotificationDocumentInt.Ref.builder().build())
-                                        .digests(NotificationDocumentInt.Digests.builder()
-                                                .sha256("sha256").build())
-                                        .build())
-                                .build())
-                        .build()))
-                .build();
-    }
 
     @Builder
     @Getter
